# pocketnav

./: CMakeLists.txt  README.md  README_WS  package.xml
demo/: nav_cmd.corpus  nav_cmd.dic  nav_cmd.lm  tiago_voice_navigation.launch
demo/small_house/: small_house.world
nodes/: recognizer.py  voice_nav.py
